@@ -1341,6 +1341,7 @@
 /memcheck/tests/freebsd/452275
 /memcheck/tests/freebsd/access
 /memcheck/tests/freebsd/bug464476
+/memcheck/tests/freebsd/bug470713
 /memcheck/tests/freebsd/capsicum
 /memcheck/tests/freebsd/chflags
 /memcheck/tests/freebsd/chmod_chown
