@@ -101,6 +101,8 @@ EXTRA_DIST = \
 	bug464476_rel_symlink.stderr.exp \
 	bug464476_rel_symlink.stdout.exp \
         memalign.vgtest memalign.stderr.exp
+	bug470713.vgtest bug470713.stderr.exp \
+		bug470713.stdout.exp
 
 check_PROGRAMS = \
 	statfs pdfork_pdkill getfsstat inlinfo inlinfo_nested.so extattr \
@@ -108,7 +110,7 @@ check_PROGRAMS = \
 	linkat scalar_fork scalar_thr_exit scalar_abort2 scalar_pdfork \
 	scalar_vfork stat file_locking_wait6 utimens access chmod_chown \
 	misc get_set_context utimes static_allocs fexecve errno_aligned_allocs \
-	setproctitle sctp sctp2 bug464476 memalign
+	setproctitle sctp sctp2 bug464476 memalign bug470713
 
 AM_CFLAGS   += $(AM_FLAG_M3264_PRI)
 AM_CXXFLAGS += $(AM_FLAG_M3264_PRI)
@@ -122,6 +124,7 @@ inlinfo_nested_so_CFLAGS = $(AM_CFLAGS) -fPIC @FLAG_W_NO_UNINITIALIZED@
 inlinfo_nested_so_LDFLAGS = -Wl,-rpath,$(top_builddir)/memcheck/tests/freebsd -shared -fPIC
 
 bug464476_SOURCES = bug464476.cpp
+bug470713_SOURCES = bug470713.cpp
 
 if FREEBSD_VERS_13_PLUS
 check_PROGRAMS += realpathat scalar_13_plus eventfd1 eventfd2
